make `App Settings` node show first and load detail app setting items lazily